--- a/src/view/xml/registerClassroom.fxml
+++ b/src/view/xml/registerClassroom.fxml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClassroomController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RegisterClassroomController">
    <children>
       <Pane prefHeight="64.0" prefWidth="300.0" style="-fx-background-color: #FBFBFB;">
          <children>
@@ -93,14 +88,15 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Button fx:id="selectStudents" layoutX="40.0" layoutY="336.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="184.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Selecionar alunos">
+            <Button layoutX="40.0" layoutY="336.0" mnemonicParsing="false" onAction="#selectStudents" prefHeight="40.0" prefWidth="184.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Selecionar alunos">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
-            <Button fx:id="registerClassroom" layoutX="40.0" layoutY="562.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="160.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Cadastrar Turma">
+            <Button layoutX="40.0" layoutY="562.0" mnemonicParsing="false" onAction="#registerClassroom" prefHeight="32.0" prefWidth="160.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Cadastrar Turma">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
+            <Label fx:id="error" alignment="CENTER" contentDisplay="CENTER" disable="true" layoutX="20.0" layoutY="610.0" prefWidth="500.0" style="-fx-pref-width: 640; -fx-pref-height: 32;" textFill="RED" wrapText="true" />
          </children>
       </Pane>
    </children>
