--- a/src/view/xml/searchSubject.fxml
+++ b/src/view/xml/searchSubject.fxml
@@ -1,17 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Pagination?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SubjectController">
    <children>
@@ -32,7 +24,7 @@
                      <children>
                         <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="160.0">
                            <children>
-                              <Label style="-fx-max-width: 80;" fx:id="userName">
+                              <Label fx:id="userName" style="-fx-max-width: 80;">
                                  <font>
                                     <Font name="Verdana" size="14.0" />
                                  </font>
@@ -162,58 +154,16 @@
             </Pane>
             <Pane layoutY="112.0" prefHeight="544.0">
                <children>
-                  <TableView prefHeight="352.0" prefWidth="680.0" style="-fx-border-color: #FFFFFF;">
+                  <TableView fx:id="subjectTable" prefHeight="352.0" prefWidth="680.0" style="-fx-border-color: #FFFFFF;">
                     <columns>
-                      <TableColumn minWidth="160.0" prefWidth="160.0" style="-fx-font-size: 14; -fx-font-family: Verdana; -fx-font-weight: 800; -fx-background-color: #E5E5E5;" text="Código" />
-                      <TableColumn minWidth="0.0" prefWidth="519.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Nome" />
+                      <TableColumn fx:id="subjectCode" minWidth="160.0" prefWidth="160.0" style="-fx-font-size: 14; -fx-font-family: Verdana; -fx-font-weight: 800; -fx-background-color: #E5E5E5;" text="Código" />
+                      <TableColumn fx:id="subjectName" minWidth="0.0" prefWidth="519.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Nome" />
                     </columns>
                   </TableView>
-                  <Pane prefHeight="352.0" prefWidth="680.0">
-                     <children>
-                        <Pane layoutY="32.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                        <Pane layoutY="72.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                        <Pane layoutY="112.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                        <Pane layoutY="152.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                        <Pane layoutY="192.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                        <Pane layoutY="232.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                        <Pane layoutY="272.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                        <Pane layoutY="312.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                     </children>
-                  </Pane>
+                  <Pane prefHeight="352.0" prefWidth="680.0" />
                   <Pane layoutY="360.0" prefHeight="184.0" prefWidth="680.0">
                      <children>
+                        <Label fx:id="error" alignment="CENTER" contentDisplay="CENTER" disable="true" layoutX="140.0" layoutY="138.0" prefWidth="500.0" style="-fx-pref-width: 400; -fx-pref-height: 32;" textFill="RED" wrapText="true" />
                         <HBox alignment="CENTER" layoutX="440.0" layoutY="40.0" prefHeight="32.0" prefWidth="240.0">
                            <children>
                               <Pagination maxPageIndicatorCount="4" prefWidth="148.0" style="-fx-font-size: 14; -fx-font-family: Verdana;" />
