--- a/src/view/xml/searchSubject.fxml
+++ b/src/view/xml/searchSubject.fxml
@@ -154,16 +154,15 @@
             </Pane>
             <Pane layoutY="112.0" prefHeight="544.0">
                <children>
-                  <TableView fx:id="subjectTable" prefHeight="352.0" prefWidth="680.0" style="-fx-border-color: #FFFFFF;">
+                  <TableView fx:id="subjectTable" prefHeight="404.0" prefWidth="680.0" style="-fx-pref-height: 400; -fx-pref-width: 680;">
                     <columns>
-                      <TableColumn fx:id="subjectCode" minWidth="160.0" prefWidth="160.0" style="-fx-font-size: 14; -fx-font-family: Verdana; -fx-font-weight: 800; -fx-background-color: #E5E5E5;" text="Código" />
-                      <TableColumn fx:id="subjectName" minWidth="0.0" prefWidth="519.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Nome" />
+                      <TableColumn fx:id="subjectCode" prefWidth="194.0" text="Código" />
+                      <TableColumn fx:id="subjectName" prefWidth="485.0" text="Nome" />
                     </columns>
                   </TableView>
-                  <Pane prefHeight="352.0" prefWidth="680.0" />
-                  <Pane layoutY="360.0" prefHeight="184.0" prefWidth="680.0">
+                  <Pane layoutY="399.0" prefHeight="145.0" prefWidth="680.0">
                      <children>
-                        <Label fx:id="error" alignment="CENTER" contentDisplay="CENTER" disable="true" layoutX="140.0" layoutY="138.0" prefWidth="500.0" style="-fx-pref-width: 400; -fx-pref-height: 32;" textFill="RED" wrapText="true" />
+                        <Label fx:id="error" alignment="CENTER" contentDisplay="CENTER" disable="true" layoutX="140.0" layoutY="99.0" prefWidth="500.0" style="-fx-pref-width: 400; -fx-pref-height: 32;" textFill="RED" wrapText="true" />
                         <HBox alignment="CENTER" layoutX="440.0" layoutY="40.0" prefHeight="32.0" prefWidth="240.0">
                            <children>
                               <Pagination maxPageIndicatorCount="4" prefWidth="148.0" style="-fx-font-size: 14; -fx-font-family: Verdana;" />
