--- a/src/view/xml/editStudent.fxml
+++ b/src/view/xml/editStudent.fxml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StudentController">
    <children>
       <Label layoutX="155.0" layoutY="200.0" text="Nome" />
-      <Label layoutX="155.0" layoutY="256.0" prefHeight="15.0" prefWidth="46.0" text="E-mail" />
+      <Label layoutX="155.0" layoutY="256.0" prefHeight="17.0" prefWidth="56.0" text="Matrícula" />
       <TextField fx:id="nameEdit" layoutX="155.0" layoutY="215.0" prefHeight="25.0" prefWidth="323.0" style="-fx-pref-width: 320; -fx-pref-height: 32;" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="204.0" layoutY="35.0" minHeight="83.0" prefWidth="233.0" text="SIGAZ" textAlignment="CENTER">
          <font>
@@ -21,10 +15,10 @@
          </font>
       </Label>
       <Label layoutX="275.0" layoutY="137.0" text="Editar Aluno" />
-      <TextField fx:id="cpfEdit" layoutX="155.0" layoutY="271.0" prefHeight="25.0" prefWidth="323.0" style="-fx-pref-width: 320; -fx-pref-height: 32;" />
+      <TextField fx:id="registrationEdit" layoutX="155.0" layoutY="271.0" prefHeight="25.0" prefWidth="323.0" style="-fx-pref-width: 320; -fx-pref-height: 32;" />
       <Label layoutX="155.0" layoutY="310.0" text="Endereço" />
       <TextField fx:id="addressEdit" layoutX="155.0" layoutY="325.0" prefHeight="25.0" prefWidth="323.0" style="-fx-pref-width: 320; -fx-pref-height: 32;" />
-      <Button layoutX="240.0" layoutY="403.0" mnemonicParsing="false" onAction="#saveEditions" style="-fx-pref-width: 160; -fx-pref-height: 40; -fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Salvar Mudanças" />
+      <Button layoutX="240.0" layoutY="403.0" mnemonicParsing="false" onAction="#update" style="-fx-pref-width: 160; -fx-pref-height: 40; -fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Salvar Mudanças" />
       <Label fx:id="error" layoutX="28.0" layoutY="28.0" prefHeight="15.0" prefWidth="594.0" textFill="RED" />
    </children>
 </Pane>
