--- a/src/view/xml/searchStudent.fxml
+++ b/src/view/xml/searchStudent.fxml
@@ -1,24 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Pagination?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StudentController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StudentController">
    <children>
       <Pane prefHeight="64.0" prefWidth="1280.0">
          <children>
@@ -146,7 +133,7 @@
                      <children>
                         <HBox alignment="CENTER" layoutX="24.0" prefHeight="112.0" prefWidth="384.0">
                            <children>
-                              <TextField fx:id="searchField" prefHeight="32.0" prefWidth="384.0" promptText="Pesquisar por nome ou código de turma" style="-fx-border-color: #DEDEDE;">
+                              <TextField fx:id="searchField" prefHeight="32.0" prefWidth="384.0" promptText="Pesquisar por nome" style="-fx-border-color: #DEDEDE;">
                                  <font>
                                     <Font name="Verdana" size="14.0" />
                                  </font>
@@ -168,57 +155,13 @@
             </Pane>
             <Pane layoutY="112.0" prefHeight="544.0">
                <children>
-                  <TableView fx:id="studentsTable" prefHeight="352.0" prefWidth="680.0" style="-fx-border-color: #FFFFFF;">
+                  <TableView fx:id="studentsTable" prefHeight="352.0" prefWidth="680.0">
                      <columns>
-                        <TableColumn fx:id="studentRegistration" minWidth="0.0" prefWidth="178.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Matrícula" />
-                        <TableColumn fx:id="studentName" minWidth="0.0" prefWidth="425.0" style="-fx-font-weight: 800; -fx-font-size: 14; -fx-font-family: Verdana; -fx-background-color: #E5E5E5;" text="Nome" />
+                        <TableColumn fx:id="studentRegistration" minWidth="0.0" prefWidth="178.0" text="Matrícula" />
+                        <TableColumn fx:id="studentName" minWidth="0.0" prefWidth="425.0" text="Nome" />
                         <TableColumn fx:id="buttons" prefWidth="75.0" />
                      </columns>
                   </TableView>
-                  <Pane prefHeight="352.0" prefWidth="680.0">
-                     <children>
-                        <Pane layoutY="32.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                        <Pane layoutY="72.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                        <Pane layoutY="112.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                        <Pane layoutY="152.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                        <Pane layoutY="192.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                        <Pane layoutY="232.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                        <Pane layoutY="272.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                        <Pane layoutY="312.0" prefHeight="40.0" prefWidth="680.0">
-                           <children>
-                              <HBox alignment="CENTER" layoutX="320.0" prefHeight="40.0" prefWidth="360.0" />
-                           </children>
-                        </Pane>
-                     </children>
-                  </Pane>
                   <Pane layoutY="360.0" prefHeight="184.0" prefWidth="680.0">
                      <children>
                         <HBox alignment="CENTER" layoutX="440.0" layoutY="40.0" prefHeight="32.0" prefWidth="240.0">
@@ -226,7 +169,7 @@
                               <Pagination maxPageIndicatorCount="4" prefWidth="148.0" style="-fx-font-size: 14; -fx-font-family: Verdana;" />
                            </children>
                         </HBox>
-                        <Button fx:id="createButton" layoutX="31.0" layoutY="40.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE; -fx-border-radius: 4; -fx-font-weight: 800; -fx-font-size: 14;" text="Cadastrar Alunos">
+                        <Button fx:id="createButton" layoutX="31.0" layoutY="40.0" mnemonicParsing="false" onAction="#create" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE; -fx-border-radius: 4; -fx-font-weight: 800; -fx-font-size: 14;" text="Cadastrar Alunos">
                            <font>
                               <Font name="Verdana" size="12.0" />
                            </font>
