--- a/src/view/xml/grades.fxml
+++ b/src/view/xml/grades.fxml
@@ -1,21 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BoletimController">
    <children>
       <Pane prefHeight="64.0" prefWidth="300.0" style="-fx-background-color: #FBFBFB;">
          <children>
@@ -28,22 +18,22 @@
       </Pane>
       <Pane layoutY="64.0" prefHeight="656.0" prefWidth="300.0" style="-fx-background-color: #F4F4F4;">
          <children>
-            <Hyperlink onAction="#classrooms" layoutX="14.0" layoutY="14.0" style="-fx-underline: false;" text="Turmas" textFill="#282828">
+            <Hyperlink layoutX="14.0" layoutY="14.0" onAction="#classrooms" style="-fx-underline: false;" text="Turmas" textFill="#282828">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Hyperlink>
-            <Hyperlink onAction="#subjects" layoutX="14.0" layoutY="59.0" style="-fx-underline: false;" text="Disciplinas" textFill="#282828">
+            <Hyperlink layoutX="14.0" layoutY="59.0" onAction="#subjects" style="-fx-underline: false;" text="Disciplinas" textFill="#282828">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Hyperlink>
-            <Hyperlink onAction="#professors" layoutX="14.0" layoutY="105.0" style="-fx-underline: false;" text="Professores" textFill="#282828">
+            <Hyperlink layoutX="14.0" layoutY="105.0" onAction="#professors" style="-fx-underline: false;" text="Professores" textFill="#282828">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Hyperlink>
-            <Hyperlink onAction="#students" layoutX="14.0" layoutY="153.0" style="-fx-underline: false;" text="Alunos" textFill="#282828">
+            <Hyperlink layoutX="14.0" layoutY="153.0" onAction="#students" style="-fx-underline: false;" text="Alunos" textFill="#282828">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -68,16 +58,15 @@
             </Label>
          </children>
       </Pane>
-      <TableView fx:id="gradesTable" layoutX="300.0" layoutY="210.0" prefHeight="338.0" prefWidth="680.0">
+      <TableView fx:id="table" layoutX="300.0" layoutY="210.0" prefHeight="338.0" prefWidth="680.0">
         <columns>
-          <TableColumn fx:id="subjectName" editable="false" prefWidth="144.0" style="font: 10px;" text="Disciplina" />
-          <TableColumn fx:id="P1" editable="false" prefWidth="56.0" text="Nota 1" />
-            <TableColumn fx:id="P2" editable="false" prefWidth="58.0" text="Nota 2" />
-            <TableColumn fx:id="P3" editable="false" prefWidth="55.0" text="Nota 3" />
-            <TableColumn fx:id="P4" prefWidth="90.0" text="Prova Final" />
-            <TableColumn fx:id="average" prefWidth="54.0" text="Media" />
-            <TableColumn fx:id="frequency" prefWidth="75.0" text="Faltas" />
-            <TableColumn fx:id="status" prefWidth="147.0" text="Status" />
+          <TableColumn fx:id="subject" editable="false" prefWidth="206.0" style="font: 10px;" text="Disciplina" />
+          <TableColumn fx:id="n1" editable="false" prefWidth="59.0" text="Nota 1" />
+            <TableColumn fx:id="n2" editable="false" prefWidth="60.0" text="Nota 2" />
+            <TableColumn fx:id="n3" editable="false" prefWidth="57.0" text="Nota 3" />
+            <TableColumn fx:id="nfinal" prefWidth="59.0" text="Media" />
+            <TableColumn fx:id="frequency" prefWidth="86.0" text="Frequência" />
+            <TableColumn fx:id="status" prefWidth="152.0" text="Status" />
         </columns>
       </TableView>
       <Button fx:id="printGrandesButton" layoutX="800.0" layoutY="642.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #FFFFFF; -fx-border-color: DEDEDE;" text="Imprimir boletim">
